# feelgood-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  asdasd  cosign.pub  docker-compose.yaml  llm_text.txt  post-audit.json  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  sbom-deps.json  sbom.json  updated-vex.json  vex.json
.github/: README.md  dependabot.yml
.github/workflows/: [just_for_reference].AIO.DEPRECATED.build-and-security.yml.txt  attestation-and-verify.yml  base-image-updates.yml  build-and-security.yml  build-and-test.yml  dependency-review.yml  security-monitoring.yml  security-pipeline.yml  slsa-provenance.yml  test-sbom-processing.yml  vex-analysis.yml  vex-generation.yml  vex-integration.yml
.vex/: .gitignore  README.md  add-production-vex.sh  validate-vex.sh
.vex/build-time/: build-20250606T082423Z.vex.json  build-20250606T090118Z.vex.json  build-20250606T093554Z.vex.json  build-20250606T095645Z.vex.json  build-20250606T100644Z.vex.json  build-20250606T124720Z.vex.json  build-20250606T153032Z.vex.json  build-20250606T204009Z.vex.json  (+9 more)
docs/: BASE_IMAGE_UPDATES.md  SETUP.md  verification.md
kubernetes/: kind-config.yaml  kyverno-policies.yaml  quick_test.sh  test_gitops.sh
scripts/: compare_scans.py  fix_vex_timestamps.sh  generate_locks.sh  generate_sbom.py  generate_vex.py  manual-verification.sh  repo-security-scanner.sh  sbom_diff.py  test-during-runtime.sh  update-base-images.sh  verify_attestations.py
src/: __init__.py  app.py  phrases.py
tests/: test_api.py
(+16 files in other folders)
