[tool.poetry]
name = "feelgood-api"
version = "1.0.0"
description = "A Feel Good Phrases API with Supply Chain Security"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.23.0"
black = "^25.1.0"
mypy = "^1.16.0"
ruff = "^0.1.11"
cyclonedx-bom = "^6.1.1"
pip-audit = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
